# ring-central-zoho-desk-bridge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
deploy/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
deploy/nginx/: default.conf
deploy/src/: beetexting_send_sms.py  beetexting_subscribe.py  message_store.py  teams_bot.py  zoho_auth.py
deploy/static/: create_ticket.html  privacy.html
deploy/teams_manifest/: manifest.json
nginx/: default.conf
src/: beetexting_auth.py  beetexting_user_auth.py  beetexting_webhook.py  list_numbers.py  message_store.py  send_sms.py  teams_client.py  whoami.py  zoho_desk.py
static/: terms.html
teams_manifest/: manifest.json
